Fixed gold color contrast issue

--- a/chamber/styles/directory.css
+++ b/chamber/styles/directory.css
@@ -660,7 +660,7 @@ footer img {
 
 #spotlight .gold {
     margin: 0.5rem;
-    color: #B8860B;
+    color: #5C4200;
     -webkit-text-stroke: 0.5px #000;
     text-shadow: 2px 3px 3px rgba(0, 0, 0, 0.7);
     font-size: 2.5rem;
